welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: not found: value getColorSol
if (getColorSol()==Color.green && estFaceMur()==false){
    ^SlugTracking:6: error: type mismatch;
 found   : Unit
 required: Boolean
	avance()
              ^SlugTracking:7: error: not found: value getColorSol
} else if(getColorSol()==Color.green && estFaceMur()==true)  {
          ^SlugTracking:10: error: type mismatch;
 found   : Unit
 required: Boolean
	gauche()
              ^SlugTracking:7: error: type mismatch;
 found   : Unit
 required: Boolean
} else if(getColorSol()==Color.green && estFaceMur()==true)  {
       ^